# embedded-wasi-threads-example

./: .gitignore  CMakeLists.txt  README.md
cmake/: FetchWasiSDK.cmake  FindWASISDK.cmake
src/: wamr_runner.cpp
wasm-module/: CMakeLists.txt  imp_export.h  log.h  main.cpp  module.cpp  timer.cpp  timer.h  wasi-toolchain.cmake  wasm-module.cmake
wasm_module/: Makefile  timer.cpp  timer.h
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: main.ts  utils.ts  worker.ts
